fixed position of scroll to top button on mobile

--- a/src/components/Search/Results/results.module.scss
+++ b/src/components/Search/Results/results.module.scss
@@ -63,7 +63,7 @@
         margin-top: 20px;
       }
       .toggleOptions {
-        width: 100%;
+        // width: 100%;
       }
     }
   }
