--- a/src/components/common/StickyHeader/responsive.module.scss
+++ b/src/components/common/StickyHeader/responsive.module.scss
@@ -60,7 +60,7 @@
     &.active {
       .stickyHeader {
         a {
-          bottom: 50px;
+          bottom: 20px;
         }
       }
     }
